# HSNETWORL

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
customer/: constants.py  urls.py  views.py
customer/helpers/: db.py
customer/static/: cred.json
customer/static/css/: admin.css  dashboard.css  main.css
customer/static/js/: config.js  dashboard.js  modal.js  phone.js  signin.js
customer/templates/: Dashboard.html  admin.html  phoneauth.html  preview.html  signin.html
hsnetworld/: asgi.py  settings.py  urls.py  wsgi.py
