[tool.poetry]
name = "hsnetworld"
version = "0.1.0"
description = ""
authors = ["Domnic <amalandomnic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
firebase_admin = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
